--- a/index.html
+++ b/index.html
@@ -4,6 +4,115 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-08</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+      }
+
+      .container {
+        position: absolute;
+        top: 8%;
+        height: auto;
+        width: 100%;
+      }
+      .bg-image {
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+        opacity: 85%;
+      }
+
+      .content {
+        position: absolute;
+        top: 15%;
+        left: 5%;
+        font-size: 1.5rem;
+        width: 40%;
+        color: rgb(190, 190, 190);
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        background: linear-gradient(to right, #879c7d, #cfcfcf, #318dc2);
+        border-radius: 20px;
+      }
+      h1 {
+        transition: all 0.5s ease-in-out;
+        padding: 5px;
+        margin: 0;
+        background: linear-gradient(
+          to right,
+          #2f2d85,
+          rgb(161, 25, 161),
+          #5ebdd4
+        );
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+      }
+      h3 {
+        margin: 10px;
+        text-align: center;
+        color: rgb(56, 56, 56);
+      }
+      h1:hover {
+        transform: scale(1.1);
+        background: linear-gradient(to right, #089708, #6a9b68);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        cursor: pointer;
+      }
+      .box-container {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        padding: 20px;
+      }
+      .box {
+        width: 250px;
+        height: 100px;
+        background: linear-gradient(to right, #8f97c4, #078a78);
+        opacity: 85%;
+        border-radius: 10px;
+        margin: auto;
+        transition: all 0.6s ease-in-out;
+      }
+
+      .box > a {
+        text-decoration: none;
+        color: black;
+        font-size: 1.3rem;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      }
+      .box:hover {
+        transform: scale(1.1);
+        border-radius: 50%;
+        font-size: 1.8rem;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <img
+      src="/Assets/images/bg img.avif"
+      alt="background image"
+      class="bg-image"
+    />
+    <div class="container">
+      <div class="content">
+        <h1>Assignment-08</h1>
+        <h3>Internet Technology</h3>
+        <div class="box-container">
+          <div class="box"><a href="/pages/Q1-part(i).html">Q1-part 1 </a></div>
+          <div class="box"><a href="/pages/Q1-part(ii).html">Q1-part 2</a></div>
+          <div class="box"><a href="/pages/Q2.html">Q2</a></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
